[gd_scene load_steps=15 format=2]

[ext_resource path="res://themes/Enemybar1.tres" type="StyleBox" id=1]
[ext_resource path="res://Enemies/Arm.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/Enemybar2.tres" type="StyleBox" id=3]
[ext_resource path="res://Art/Enemies.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Melee.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.5466
height = 23.6183

[sub_resource type="Animation" id=2]
resource_name = "Die_Shroom"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle_Shadow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}

[sub_resource type="Animation" id=4]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 24 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk_Shadow"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=6]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 23.9697 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 23.9697 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 22.9167, 23.7193 )

[node name="ShroomMan" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 14
collision_mask = 0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
vframes = 7
hframes = 5
frame = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.4295, 0 )
shape = SubResource( 1 )

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 15.876, -0.0487723 )
enabled = true
collision_mask = 6

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -20.779, -0.699047 )
enabled = true
collision_mask = 6

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -36.0
margin_right = 17.0
margin_bottom = -30.0
custom_styles/fg = ExtResource( 1 )
custom_styles/bg = ExtResource( 3 )
max_value = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die_Shroom = SubResource( 2 )
anims/Idle_Shadow = SubResource( 3 )
anims/Idle_Shroom = SubResource( 4 )
anims/Walk_Shadow = SubResource( 5 )
anims/Walk_Shroom = SubResource( 6 )

[node name="Arm" parent="." instance=ExtResource( 2 )]
position = Vector2( 0.086524, -6.58979 )

[node name="CollisionShape2D" parent="Arm" index="2"]
visible = false

[node name="LeftArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
visible = false
position = Vector2( -15.5899, -0.107523 )
shape = SubResource( 7 )

[node name="RightArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
visible = false
position = Vector2( 9.47499, 0.464987 )
shape = SubResource( 8 )

[node name="Sight" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
visible = false
position = Vector2( -2.96803, 0.214642 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
[connection signal="dead" from="." to="." method="_on_ShroomMan_dead"]
[connection signal="body_entered" from="Arm" to="." method="_on_Arm_body_entered"]
[connection signal="animation_finished" from="Arm/AnimationPlayer" to="." method="_on_arm_done"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Arm"]
